# cloudcompare_registration_ros2

./: Dockerfile  Makefile  README.md  run_container.sh
CC_commands/: 003_final_transform.txt  003_initial_transform.txt  003_rosbag2_new_livox_jul_2024_0_TRANSFORMED_C2C_DIST_MAX_DIST_0.11_2024-08-21_13h55_21_452_FILTERED_[0_0.1]_REGISTRATION_MATRIX_2024-08-21_14h29_40_085.txt  108_final_transform  108_initial_transform.txt  180_final_transform.txt  180_initial_transform.txt  command_C2C_DIST.txt  command_post_C2C_DIST  run1.bat
docker/: genCloudComPy_Conda310_docker.sh  ros_entrypoint.sh  run.sh  run_cloudcompare.sh  run_tests.sh  setup_cloudcompy310.sh
pointcloud_registration_msgs/: CMakeLists.txt  README.md  package.xml
pointcloud_registration_msgs/srv/: Registration.srv
ros2_livox_cloudcompare/: package.xml  setup.cfg  setup.py
ros2_livox_cloudcompare/ros2_livox_cloudcompare/: ros2_livox_cloudcompare.py
ros2_livox_cloudcompare/test/: test_cc_srv.py
