<package format="3">
  <name>pointcloud_registration_msgs</name>
  <version>0.0.3</version>
  <description>pointcloud_registration_msgs</description>
  <author email="mickey.li@ucl.ac.uk">Mickey Li</author>
  <maintainer email="mickey.li@ucl.ac.uk">Mickey Li</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
