<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_livox_cloudcompare</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mickey.li@ucl.ac.uk">mickey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>pointcloud_registration_msgs</depend>
  <depend>launch_ros</depend>

  <build_depend>launch_testing</build_depend>
  <exec_depend>launch_testing</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>pointcloud_registration_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
